// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography renders figcaption correctly 1`] = `
<figcaption
  className="fd-typography article-inline-figcaption"
  textStyle={null}
  textstyle="article-inline-figcaption"
>
  <span
    className="caption"
  >
    caption text
  </span>
  <span
    className="photographer"
  >
    source: kitchensink
  </span>
</figcaption>
`;

exports[`Typography renders figcaption correctly 2`] = `
<figcaption
  className="fd-typography article-longread-inline-figcaption"
  textStyle={null}
  textstyle="article-longread-inline-figcaption"
>
  <span
    className="caption"
  >
    article longread inline
  </span>
  <span
    className="photographer"
  >
    source: kitchensink
  </span>
</figcaption>
`;

exports[`Typography renders heading correctly 1`] = `
<h1
  className="fd-typography article-h-longread"
  textStyle={null}
  textstyle="article-h-longread"
>
  longread
</h1>
`;

exports[`Typography renders heading correctly 2`] = `
<h1
  className="fd-typography page-h"
  textStyle={null}
  textstyle="page-h"
>
  page
</h1>
`;

exports[`Typography renders heading correctly 3`] = `
<h2
  className="fd-typography article-h-subheader"
  textStyle={null}
  textstyle="article-h-subheader"
>
  subheader
</h2>
`;

exports[`Typography renders heading correctly 4`] = `
<h2
  className="fd-typography article-h-inline-number-frame"
  textStyle={null}
  textstyle="article-h-inline-number-frame"
>
  number frame
</h2>
`;

exports[`Typography renders heading correctly 5`] = `
<h3
  className="fd-typography article-h-subheader2"
  textStyle={null}
  textstyle="article-h-subheader2"
>
  Card
</h3>
`;

exports[`Typography renders heading correctly 6`] = `
<h3
  className="fd-typography card-h"
  textStyle={null}
  textstyle="card-h"
>
  Card
</h3>
`;

exports[`Typography renders p correctly 1`] = `
<p
  className="fd-typography article-p"
  textStyle={null}
  textstyle="article-p"
>
  article
</p>
`;

exports[`Typography renders p correctly 2`] = `
<p
  className="fd-typography article-p-longread"
  textStyle={null}
  textstyle="article-p-longread"
>
  article longread
</p>
`;
